2007-03-13  Brooks Moses  <brooks.moses@codesourcery.com>

	PR fortran/30933
	PR fortran/30948
	PR fortran/30953
	* intrinsics.texi (CHDIR): Fix argument names, note
	that STATUS must be a default integer.
	(CTIME): Fix argument names, note that RESULT must
	be a default integer.
	(EXIT): Note that STATUS must be a default integer.

2007-03-13  Brooks Moses  <brooks.moses@codesourcery.com>

	Backport from trunk:
	PR fortran/28068
	* intrinsic.texi: General whitespace cleanup, remove
	comment about missing intrinsics.
	(menu): Add lines for new entries listed below.
	(ACOSH): Mention specific function DACOSH, correct
	description phrasing.
	(ASINH): Mention specific function DASINH, correct
	description phrasing.
	(ATANH): Mention specific function DATANH, correct
	description phrasing.
	(COS): Add index entry for CCOS.
	(CPU_TIME): Correct "REAL" to "REAL(*)".
	(EXP): Add index entry for CEXP.
	(INT): Correct argument name to "A".
	(INT2): New entry.
	(INT8): New entry.
	(LONG): New entry.
	(MAX): Add index entries for specific variants.
	(MCLOCK): New entry.
	(MCLOCK8): New entry.
	(SECNDS): Adjust to a more standard form.
	(SECOND): New entry.
	(TIME): Add cross-reference to MCLOCK.
	(TIME8): Add cross-reference to MCLOCK8.

2007-03-08  Brooks Moses  <brooks.moses@codesourcery.com>

	Backport from trunk:
	* intrinsic.texi: minor typo fixes, removed prologue.
	(FSEEK): moved to correct place in alphabetical order.
	(LINK) Document function form.
	(RENAME): Likewise.
	(SYMLNK): Likewise.
	(SYSTEM): Likewise.
	(UNLINK): Likewise.
	(ICHAR) Improve internal I/O note.
	(ACHAR): Reference it.
	(CHAR): Reference it.
	(IACHAR): Reference it.

2007-03-08  Daniel Franke  <franke.daniel@gmail.com>

	Backport from trunk:
	PR fortran/30947
	* check.c (gfc_check_alarm_sub): Added check for default integer
	kind of status argument.
	* iresolve.c (gfc_resolve_alarm_sub): Removed conversion of 
	status argument.
	* intrinsic.texi (ALARM): Extended documentation.
